fix(style): correct default dark mode

--- a/nuxt/assets/css/main.css
+++ b/nuxt/assets/css/main.css
@@ -24,7 +24,7 @@
 
 @layer utilities {
   .creal-prose {
-    @apply prose prose-base lg:prose-lg xl:prose-xl dark:prose-invert; /* prose-sm sm: 2xl:prose-2xl */
+    @apply prose prose-base lg:prose-lg xl:prose-xl prose-invert; /* prose-sm sm:... 2xl:prose-2xl */ /* dark mode is default */
   }
 
   .creal-prose-fullwidth {
